--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.8",
         "malhal/laravel-geographical": "^1.0",
         "stevebauman/location": "^7.3",
-        "toin0u/geocoder-laravel": "^4.7"
+        "toin0u/geocoder-laravel": "^4.7",
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
